--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/PR1.PNG);">
+							<div class="project" style="background-image: url(/images/PR1.PNG);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="">Homepage</a></h3>
