--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/PR2.PNG);">
+							<div class="project" style="background-image: url(images/PR2.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="">Login</a></h3>
@@ -456,7 +456,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/PR3.PNG);">
+							<div class="project" style="background-image: url(images/PR3.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="">Forget password</a></h3>
@@ -466,7 +466,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/PR4.PNG);">
+							<div class="project" style="background-image: url(images/PR4.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="">Hod homepage</a></h3>
@@ -477,7 +477,7 @@
 						</div>
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/PR9.PNG);">
+							<div class="project" style="background-image: url(images/PR9.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="">Staff Details</a></h3>
@@ -487,7 +487,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/PR12.PNG);">
+							<div class="project" style="background-image: url(images/PR12.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Student Details</a></h3>
