--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="#">Krishna Kumar</a></h1>
 				<span class="position"><a href="#">Full stack developer</a> in Indian</span>
 			</div>
@@ -83,7 +83,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url();">
+				   	<li style="background-image: url(image/proifile.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -99,7 +99,7 @@
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url();">
+				   	<li style="background-image: url(image/proifile2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
