--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/profile.jpg);widht:80%;height:80%">
+				   	<li style="background-image: url(images/profile.jpg);widht:100%;">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
