--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-2">
+								<span class="icon">
+									<i class="icon-data"></i>
+								</span>
+								<div class="desc">
+									<h3>Cloud Engineer</h3>
+									<p>I am pursing Cloud engineering from Google cloud platform.</p>
+								</div>
+							</div>
+						</div>
 
 				
 					</div>
