--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Krishna</h1>
 	
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn"href="krishna_resume.pdf" download>Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
