--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
-
+		
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	
@@ -534,6 +536,14 @@
 								</div>
 								<div class="colorlib-text">
 									<p><a href="tel://">+91 7044908889</a></p>
+								</div>
+							</div>
+							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="colorlib-icon">
+								<i class="fa fa-linkedin-square" style="font-size:48px;color:#0e76a8"></i>
+								</div>
+								<div class="colorlib-text">
+									<p><a href="https://www.linkedin.com/in/krishna-k-546814104/">Krishna Kumar</a></p>
 								</div>
 							</div>
 						</div>
