--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p></p>
+										      			<p>Pailan College of Management and Technology</p>
 										      		</div>
 										      		<div class="col-md-6">
 										      			<p></p>
@@ -322,7 +322,7 @@
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p></p>	
+									            <p>Budge Budge Institute of Technology</p>	
 									        </div>
 									    </div>
 									</div>
@@ -337,7 +337,7 @@
 									    </div>
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
-									            <p></p>	
+									            <p>Don Bosco Technical Institute(Park Circus)</p>	
 									        </div>
 									    </div>
 									</div>
