--- a/index.html
+++ b/index.html
@@ -189,6 +189,17 @@
 								</div>
 							</div>
 						</div>
+			<div class="col-md-4 text-center animate-box">
+							<div class="services color-2">
+								<span class="icon">
+									<i class="icon-android"></i>
+								</span>
+								<div class="desc">
+									<h3>Flutter Developer</h3>
+									<p>I am learning app development in Flutter.</p>
+								</div>
+							</div>
+						</div>
 
 				
 					</div>
