--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-magnet"></i>
 								</span>
 								<div class="desc">
 									<h3>Computer Network</h3>
@@ -190,7 +190,7 @@
 							</div>
 						</div>
 			<div class="col-md-4 text-center animate-box">
-							<div class="services color-2">
+							<div class="services color-4">
 								<span class="icon">
 									<i class="icon-android"></i>
 								</span>
